objects/copado__JobStep__c.object
<CustomObject>
    <fields>
        <fullName>copado__ApiName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__ConfigJson__c</fullName>
        <label>ConfigJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Id__c</fullName>
        <formula>CASESAFEID(copado__JobExecution__r.copado__Destination__c)</formula>
        <label>Destination Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <formula>IF(NOT(ISBLANK(copado__JobExecution__r.copado__Promotion__c)),
    copado__JobExecution__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c,
    copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c
)</formula>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__JobExecution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__JobTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Owner_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( copado__JobExecution__r.copado__Deployment__c )), copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.OwnerId,
IF(NOT(ISBLANK( copado__JobExecution__r.copado__Promotion__c )), copado__JobExecution__r.copado__Promotion__r.OwnerId, null
)
)</formula>
        <label>Parent Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline_Id__c</fullName>
        <formula>IF(NOT(ISBLANK(copado__JobExecution__r.copado__Promotion__c)),
    IF(NOT(ISBLANK(copado__JobExecution__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c)),
        copado__JobExecution__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c,
        copado__JobExecution__r.copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__c
    ),
    IF(NOT(ISBLANK(copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c)),
        copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c,
        copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__c
    )
)</formula>
        <label>Pipeline Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ResultDataJson__c</fullName>
        <label>Result Data Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result</label>
        <referenceTo>copado__Result__c</referenceTo>
        <relationshipLabel>Job Steps</relationshipLabel>
        <relationshipName>JobSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source_Id__c</fullName>
        <formula>CASESAFEID(copado__JobExecution__r.copado__Source__c)</formula>
        <label>Source Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <formula>IF(NOT(ISBLANK(copado__JobTemplate__c)), &apos;NA&apos;, 
    if(ISBLANK(copado__Result__c), &apos;Pending&apos;, TEXT(copado__Result__r.copado__Status__c)))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Step</label>
    <nameField>
        <label>Job Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Template_OR_Execution_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( copado__JobTemplate__c ), ISBLANK(  copado__JobExecution__c  ) )</errorConditionFormula>
        <errorMessage>JobTemplate or Execution is required</errorMessage>
    </validationRules>
</CustomObject>